--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,10 @@
   --blue: #4946c3;
 }
 
+#root {
+  position: relative;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -642,7 +646,7 @@ body {
 .dev {
   border-radius: 0 0 60px 60px;
   position: relative;
-  z-index: 3;
+  z-index: 6;
   color: var(--black);
   padding-bottom: 250px;
   &::after {
@@ -682,6 +686,7 @@ body {
         transition: 0.8s;
         opacity: 0;
         position: relative;
+        z-index: 8;
         right: calc(-1 * var(--containerOffset));
         width: 50%;
         flex-shrink: 0;
@@ -779,8 +784,18 @@ body {
 }
 
 .design {
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    border-radius: 0 0 60px 60px;
+    background: var(--gray);
+  }
   position: relative;
-  z-index: 5;
+  z-index: 6;
   background: url(../images/designBg.png);
   margin-top: -60px;
   padding: 100px 0 120px;
@@ -792,6 +807,8 @@ body {
   &__upper {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    z-index: 6;
     &__right {
       width: 50%;
       &__title {
@@ -845,8 +862,6 @@ body {
     }
     &__image {
       &__container {
-        position: relative;
-        z-index: 10;
         margin-top: -300px;
         transition: 0.6s;
         transform: translateY(100px);
@@ -999,6 +1014,7 @@ body {
       transition: 0.3s;
       &:hover {
         transform: rotate(2deg);
+        box-shadow: 0 0 0 1px;
       }
     }
   }
@@ -1076,9 +1092,10 @@ body {
         background: var(--olive);
         color: var(--black);
         width: 350px;
-        transition: 0.2s;
+        transition: 0.3s;
         &:hover {
           background: rgb(233, 255, 106);
+          transform: rotate(2deg);
         }
       }
       display: flex;
@@ -1098,12 +1115,29 @@ body {
         font-weight: 600;
         line-height: 131%;
         font-family: var(--text-ff);
+        transition: 0.3s;
+        &:hover {
+          transform: rotate(2deg);
+          box-shadow: 0 0 0 2px;
+        }
       }
     }
   }
 }
 
 .extra {
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    border-radius: 0 0 60px 60px;
+    background: var(--black);
+  }
+  position: relative;
+  z-index: 2;
   margin-top: -60px;
   border-radius: 0 0 60px 60px;
   padding: 180px 0 30px;
@@ -1185,6 +1219,11 @@ body {
           border-radius: 130px;
           border: 2px solid var(--black);
           font-family: var(--text-ff);
+          transition: 0.3s;
+          &:hover {
+            transform: rotate(2deg);
+            box-shadow: 0 0 0 1px;
+          }
         }
       }
     }
@@ -1806,8 +1845,6 @@ body {
       &__subtitle {
         font-size: 1.8rem;
         letter-spacing: -1px;
-      }
-      &__text {
       }
       &__image {
         &__container {
