--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -337,6 +337,7 @@ body {
   position: relative;
   z-index: 2;
   &__poster {
+    white-space: nowrap;
     position: absolute;
     z-index: -1;
     left: 34%;
@@ -583,6 +584,7 @@ body {
         letter-spacing: 0.3px;
         cursor: pointer;
         transition: 0.5s;
+        pointer-events: none;
       }
       &__icon {
         &__container {
@@ -595,6 +597,7 @@ body {
           align-items: center;
           border-radius: 50%;
           background: var(--white);
+          pointer-events: none;
         }
       }
     }
@@ -955,7 +958,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     &__title {
-      transform: translateX(50px);
+      transform: translateY(50px);
       transition: 0.8s;
       opacity: 0;
     }
@@ -1111,7 +1114,7 @@ body {
     flex-direction: column;
     width: 100%;
     &__text {
-      width: 700px;
+      width: 750px;
       font-size: 1.25rem;
       font-style: normal;
       font-weight: 400;
@@ -1217,7 +1220,7 @@ body {
   color: var(--black);
   &__title {
     text-align: center;
-    transform: translateY(-50px);
+    transform: translateY(50px);
     opacity: 0;
     transition: 0.8s;
   }
@@ -1459,7 +1462,12 @@ body {
     &__link {
       font-family: var(--text-ff);
       font-size: 1.2rem;
+      transition: 0.4s;
       cursor: pointer;
+      &:hover {
+        transform: translateY(-2px);
+        transition: 0.4s;
+      }
     }
   }
   &__copyright {
@@ -1753,7 +1761,6 @@ body {
             font-size: 1rem;
           }
           &__symbol {
-            width: 80px;
             &__container {
               width: 160px;
               height: 110px;
@@ -1937,6 +1944,10 @@ body {
         margin-bottom: 0;
         align-self: flex-start;
         height: auto !important;
+        flex-direction: column;
+        br {
+          display: none;
+        }
       }
       gap: 25px;
       &__text {
@@ -1973,6 +1984,9 @@ body {
     }
     &__info {
       font-size: 0.85rem;
+      &__text {
+        width: auto;
+      }
     }
     &__services {
       padding-right: 0;
@@ -2082,6 +2096,15 @@ body {
             font-size: 0.85rem;
           }
         }
+      }
+    }
+    &__policies {
+      flex-direction: column;
+      gap: 10px;
+      padding: 20px 0;
+      align-items: center;
+      &__link {
+        font-size: 0.9rem;
       }
     }
     &__logo {
