--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -45,6 +45,18 @@ textarea {
   resize: none;
 }
 
+.phrase:nth-child(1) {
+  transition-delay: 0.1s !important;
+}
+
+.phrase:nth-child(2) {
+  transition-delay: 0.5s !important;
+}
+
+.phrase:nth-child(3) {
+  transition-delay: 0.9s !important;
+}
+
 input:focus,
 textarea:focus {
   outline: none;
@@ -1114,7 +1126,7 @@ body {
     flex-direction: column;
     width: 100%;
     &__text {
-      width: 750px;
+      width: 700px;
       font-size: 1.25rem;
       font-style: normal;
       font-weight: 400;
@@ -1882,6 +1894,7 @@ body {
       }
     }
     &__lower {
+      margin-left: 0;
       .design__upper__image {
         width: 100%;
         height: 100%;
