--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -341,8 +341,8 @@ body {
   margin-top: 120px;
   width: 100%;
   border-radius: 30px;
-  height: 950px;
-  padding: 100px 60px 120px;
+  height: calc(100vh - 140px);
+  padding: 50px 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -399,7 +399,7 @@ body {
     transition: 0.8s;
   }
   &__right {
-    height: 650px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -554,9 +554,10 @@ body {
       padding: 50px 40px 25px;
       transition: 0.6s;
       transform: translateX(100px);
-
+      border-radius: 25px;
       &:hover {
-        border-radius: 25px;
+        position: relative;
+        z-index: 2;
       }
       &:hover .services__list__item__title {
         transform: translateY(-5px);
@@ -659,7 +660,7 @@ body {
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(0, 0, 0, 0.8);
       z-index: -1;
     }
     // background: url(../images/servicesBg.png), black -40px 104.247px / 130.342% 104.055% no-repeat;
@@ -1558,6 +1559,20 @@ body {
         transition: 0.4s;
       }
     }
+  }
+}
+
+@media screen and (max-width: 1700px) {
+  .banner {
+    &__title {
+      font-size: 12rem;
+    }
+    &__poster {
+      top: 75px;
+    }
+  }
+  .title {
+    font-size: 8.5rem;
   }
 }
 
