--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -475,6 +475,16 @@ body {
   align-items: center;
   position: relative;
   z-index: 7;
+  &::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 0 0 60px 60px;
+  }
   &__upper {
     display: flex;
     align-items: center;
@@ -555,10 +565,27 @@ body {
       transition: 0.6s;
       transform: translateX(100px);
       border-radius: 25px;
+      position: relative;
+      &::before {
+        transition: 0.3s linear;
+        z-index: 10;
+        position: absolute;
+        content: "";
+        top: 0;
+        right: 0;
+        width: 25px;
+        height: 100%;
+        border-radius: 30px 0 0 30px;
+      }
+      &:hover::before {
+        z-index: 12;
+        border-radius: 0 30px 30px 0;
+        transition: 0.3s linear;
+      }
       &:hover {
-        position: relative;
         z-index: 2;
       }
+
       &:hover .services__list__item__title {
         transform: translateY(-5px);
       }
@@ -567,6 +594,12 @@ body {
       }
       &:nth-child(1) {
         background: var(--white);
+        &::before {
+          background: var(--blue);
+        }
+        &:hover::before {
+          background: var(--white);
+        }
         color: var(--black);
         .services__list__item__icon__container {
           background: var(--black);
@@ -574,11 +607,23 @@ body {
         transition-delay: 0.1s;
       }
       &:nth-child(2) {
+        &::before {
+          background: var(--olive);
+        }
+        &:hover::before {
+          background: var(--blue);
+        }
         color: var(--white);
         background: var(--blue);
         transition-delay: 0.2s;
       }
       &:nth-child(3) {
+        &::before {
+          background: #2c2c2c;
+        }
+        &:hover::before {
+          background: var(--olive);
+        }
         color: var(--black);
         background: var(--olive);
         transition-delay: 0.3s;
@@ -637,7 +682,6 @@ body {
         }
       }
     }
-    position: relative;
     background: url(../images/servicesBg.png) no-repeat center center / cover;
     position: relative;
     z-index: 4;
@@ -1023,7 +1067,7 @@ body {
   color: var(--black);
   padding: 160px 0 0;
   border-radius: 0 0 60px 60px;
-  background: url(../images/servicesBg.png) no-repeat center bottom / cover;
+  background: url(../images/marketingBg.png) no-repeat center bottom / cover;
   &__inner {
     position: relative;
     display: flex;
