--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -566,24 +566,9 @@ body {
       transform: translateX(100px);
       border-radius: 25px;
       position: relative;
-      &::before {
-        transition: 0.3s linear;
-        z-index: 10;
-        position: absolute;
-        content: "";
-        top: 0;
-        right: 0;
-        width: 25px;
-        height: 100%;
-        border-radius: 30px 0 0 30px;
-      }
-      &:hover::before {
-        z-index: 12;
-        border-radius: 0 30px 30px 0;
-        transition: 0.3s linear;
-      }
+
       &:hover {
-        z-index: 2;
+        margin-top: -10px;
       }
 
       &:hover .services__list__item__title {
@@ -594,12 +579,7 @@ body {
       }
       &:nth-child(1) {
         background: var(--white);
-        &::before {
-          background: var(--blue);
-        }
-        &:hover::before {
-          background: var(--white);
-        }
+
         color: var(--black);
         .services__list__item__icon__container {
           background: var(--black);
@@ -607,23 +587,11 @@ body {
         transition-delay: 0.1s;
       }
       &:nth-child(2) {
-        &::before {
-          background: var(--olive);
-        }
-        &:hover::before {
-          background: var(--blue);
-        }
         color: var(--white);
         background: var(--blue);
         transition-delay: 0.2s;
       }
       &:nth-child(3) {
-        &::before {
-          background: #2c2c2c;
-        }
-        &:hover::before {
-          background: var(--olive);
-        }
         color: var(--black);
         background: var(--olive);
         transition-delay: 0.3s;
@@ -748,6 +716,12 @@ body {
           font-weight: 400;
           line-height: 92.5%;
           letter-spacing: -7.74px;
+          transform: translateY(50px);
+          transition: 0.8s;
+          opacity: 0;
+          &.secondnumber {
+            transition-delay: 0.2s;
+          }
         }
         &__text {
           font-size: 1.875rem;
@@ -762,8 +736,11 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
-
+            transform: translateY(50px);
+            transition: 0.8s;
+            opacity: 0;
             border-radius: 50%;
+            transition-delay: 0.4s;
           }
         }
       }
@@ -820,15 +797,16 @@ body {
   }
   &__column {
     &:nth-child(1) {
-      transition-delay: 0.2s;
       transform: translateY(50px);
       transition: 0.8s;
+      transition-delay: 0.5s;
       opacity: 0;
     }
     &:nth-child(2) {
-      transition-delay: 0.4s;
       transform: translateY(50px);
       transition: 0.8s;
+      transition-delay: 1s;
+
       opacity: 0;
     }
     position: relative;
@@ -1298,24 +1276,24 @@ body {
       opacity: 0;
       &:nth-child(1) {
         grid-area: 1 / 1 / 1 / 2;
-        transition-delay: 0.1s;
+        transition-delay: 0.3s;
       }
       &:nth-child(2) {
         grid-area: 1 / 2 / 1 / 4;
         background: var(--olive);
-        transition-delay: 0.3s;
+        transition-delay: 0.6s;
       }
       &:nth-child(3) {
         grid-area: 2 / 1 / 2 / 3;
         background: var(--blue);
         color: var(--white);
-        transition-delay: 0.5s;
+        transition-delay: 0.9s;
         .extra__grid__item__services__item {
           border: 2px solid var(--white);
         }
       }
       &:nth-child(4) {
-        transition-delay: 0.7s;
+        transition-delay: 1.2s;
         grid-area: 2 / 3 / 2 / 4;
       }
       display: flex;
